优化代码结构

--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "archiver-zip-encrypted": "^2.0.0",
     "axios": "^0.18.0",
     "canvas": "2.11.2",
+    "core-js": "3",
     "cornerstone-core": "^2.6.1",
     "cornerstone-math": "^0.1.10",
     "cornerstone-tools": "^6.0.10",
@@ -86,6 +87,7 @@
     "localforage": "^1.10.0",
     "multispinner": "^0.2.1",
     "nprogress": "^0.2.0",
+    "polyfill-object.fromentries": "^1.0.1",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-i18n": "7.8.1",
@@ -94,16 +96,14 @@
     "vuex-electron": "^1.0.0"
   },
   "devDependencies": {
+    "@babel/core": "7.23.7",
+    "@babel/eslint-parser": "^7.28.4",
+    "@babel/plugin-transform-runtime": "7.23.7",
+    "@babel/preset-env": "7.23.7",
+    "@babel/register": "7.23.7",
     "ajv": "^6.5.0",
     "autoprefixer": "^8.0.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.3",
-    "babel-loader": "^7.1.4",
-    "babel-minify-webpack-plugin": "^0.3.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.26.0",
+    "babel-loader": "8.4.1",
     "cfonts": "^2.1.2",
     "chalk": "^2.4.1",
     "copy-webpack-plugin": "^4.5.1",
@@ -131,7 +131,7 @@
     "sass": "^1.80.6",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
-    "ts-loader": "^9.4.2",
+    "ts-loader": "^8.4.0",
     "typescript": "^4.9.5",
     "url-loader": "^1.0.1",
     "vue-devtools": "^5.1.4",
