--- a/package.json
+++ b/package.json
@@ -25,14 +25,23 @@
   "build": {
     "productName": "SoonView",
     "appId": "com.cardsoon.SoonView",
+    "asar": true,
+    "compression": "maximum",
+    "files": [
+      "dist/electron/**/*",
+      "node_modules/**/*",
+      "package.json",
+      "!**/*.map",
+      "!src/**/*",
+      "!.electron-vue/**/*",
+      "!build/**/*",
+      "!test{,s}/**/*",
+      "!*.md"
+    ],
     "extraFiles": [
       {
-        "from": "DICOM",
-        "to": "./DICOM"
-      },
-      {
-        "from": "dicom-config.txt",
-        "to": "./dicom-config.txt"
+        "from": "cardsoon.com",
+        "to": "./cardsoon.com"
       }
     ],
     "linux": {
@@ -41,15 +50,24 @@
           "target": [
             {
               "target": "AppImage",
-              "arch": ["x64", "arm64"]
+          "arch": [
+            "x64",
+            "arm64"
+          ]
             },
             {
               "target": "deb",
-              "arch": ["x64", "arm64"]
+          "arch": [
+            "x64",
+            "arm64"
+          ]
             },
             {
               "target": "rpm",
-              "arch": ["x64", "arm64"]
+          "arch": [
+            "x64",
+            "arm64"
+          ]
             }
           ],
           "icon": "public/images/favicon.svg"
@@ -61,8 +79,6 @@
   },
   "dependencies": {
     "@electron/remote": "^2.1.2",
-    "archiver": "^7.0.1",
-    "archiver-zip-encrypted": "^2.0.0",
     "axios": "^1.6.0",
     "core-js": "3",
     "cornerstone-core": "^2.6.1",
@@ -73,19 +89,14 @@
     "dcmjs": "^0.43.1",
     "dicom-parser": "^1.8.21",
     "element-ui": "^2.15.14",
-    "fake-progress": "^1.0.4",
     "hammerjs": "^2.0.8",
     "js-cookie": "^3.0.5",
     "localforage": "^1.10.0",
-    "multispinner": "^0.2.1",
     "nprogress": "^0.2.0",
-    "polyfill-object.fromentries": "^1.0.1",
     "vue": "^2.5.16",
-    "vue-electron": "^1.0.6",
     "vue-i18n": "7.8.1",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "vuex-electron": "^1.0.0"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "7.23.7",
@@ -117,6 +128,7 @@
     "html-webpack-plugin": "^3.2.0",
     "listr": "^0.14.3",
     "mini-css-extract-plugin": "0.4.0",
+    "multispinner": "^0.2.1",
     "node-loader": "^0.6.0",
     "postcss": "7.0.0",
     "postcss-loader": "^4.0.0",
